<resources>
    <string name="app_name">AdzApp</string>
    <string name="title_home">For you</string>
    <string name="title_market">Ads Market</string>
    <string name="title_Profile">Profile</string>
    <string name="title_wallet">Wallet</string>
    <string name="title_settings">Settings</string>
    <string name="title_DetailAd">Detail AD</string>
    <string name="title_ScanQR">Scan QR</string>
    <string name="title_more">More</string>
    <string name="title_Ad_publisher_and_Agent">Ad publisher and agent login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up_button">Register</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="btn_login">Login</string>
    <string name="btn_forgot_password">Forgot Password</string>
    <string name="btn_link_to_register">New user! Register.</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="user_created">"created user with email: "</string>
    <string name="auth_failed">Authentication failed! please try Again.</string>
    <string name="blank_password">Please enter password</string>
    <string name="blank_email">Please enter email</string>
    <string name="lbl_forgot_password">Forgot password?!</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="btn_reset_password">Reset password</string>
    <string name="btn_back">Back</string>
    <string name="reset_password_mail_sent">We have sent you instructions to reset your password!</string>
    <string name="reset_password_mail_sent_error">Failed to send reset email!</string>
    <string name="error_occured">"Error occurred!! "</string>
    <string name="user_registred">User Registered.</string>
    <string name="updated_successfully">Updated Successfully</string>
    <string name="update_failed">Updated Failed, please try again</string>
    <string name="btn_signOut">Sign out</string>
    <string name="service_notification_text">Looking for tunes</string>
    <string name="msg_subscribed">Subscribed to city successfully </string>
    <string name="msg_subscribe_failed">Subscribed to city notifications failed</string>
    <string name="internet_connection_msg">Good, connected to internet</string>
    <string name="no_internet_connection_msg">Sorry! No internet connection</string>
    <string name="display_name">Display name</string>
    <string name="city">City</string>
    <string name="ad_publisher">Ads Publisher</string>
    <string name="btn_save_details">Save details</string>
    <string name="btn_edit_details">Update Profile</string>
    <string name="points">Reward points</string>
    <string name="signout">Sign Out</string>
    <string name="title_activity_settings">Settings</string>
    <string name="coupon_code">Coupon code</string>
    <string name="offer_redeemed">Redeemed from</string>
    <string name="redeem">Redeem</string>
    <string name="offer_expires_on">Expires on</string>
    <string name="rewards_updated">Rewards updated to: </string>
    <string name="low_in_wallet">No enough points in wallet</string>
    <string name="permissions_title">Need some Permissions</string>
    <string name="permissions_message">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="permissions_goto_settings">GOTO SETTINGS</string>
    <string name="cancel">Cancel</string>
    <string name="processing_failure">Unable to process request now, please try later.</string>
    <string name="intent_choose_image">Select Picture</string>
    <string name="profile_pic_description">Profile pic of publisher</string>
    <string name="dummy_publisher_name">AdzApp</string>
    <string name="dummy_timestamp">never exires</string>
    <string name="dummy_text">Let\'s provide exciting offers to users</string>
    <string name="dummy_url">adzapp.in</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="emailVerification_dailog_title">Email not verified!</string>
    <string name="emailVerification_dailog_message">You haven\'t verified your email. You can\'t redeem till you verify your email. Do you want us to send you verification link again! or will you check your mail!</string>
    <string name="resend_email">Send me mail</string>
    <string name="dont_send_email">No, don\'t send</string>
    <string name="dont_send_email_toast">"You clicked on don\'t send eamil"</string>
    <string name="email_sent_sucessfully">Email sent successfully, check your mail box..</string>
    <string name="emailVerification_profile_text">Email not verified - CLICK TO VERIFY NOW!</string>
    <string name="intro_slide1_title">Great to have you on board</string>
    <string name="intro_slide1_description">Ready to try us?</string>
    <string name="intro_slide1_message">Get Started</string>
    <string name="intro_slide1_button_text">Click next button to move further.</string>
    <string name="t_and_c_error_message">Please accept terms and conditions first.</string>
    <string name="check_to_pass">I accept terms and conditions.</string>
    <string name="t_and_c_message">Terms and Conditions\n

By downloading or using the app, these terms will automatically apply to you – you should make sure therefore that you read them carefully before using the app. You’re not allowed to copy, or modify the app, any part of the app, or our trademarks in any way. You’re not allowed to attempt to extract the source code of the app, and you also shouldn’t try to translate the app into other languages, or make derivative versions. The app itself, and all the trade marks, copyright, database rights and other intellectual property rights related to it, still belong to D Thoughts Innolabs.\n

D Thoughts Innolabs is committed to ensuring that the app is as useful and efficient as possible. For that reason, we reserve the right to make changes to the app or to charge for its services, at any time and for any reason. We will never charge you for the app or its services without making it very clear to you exactly what you’re paying for.\n

The AdzApp app stores and processes personal data that you have provided to us, in order to provide our Service. It’s your responsibility to keep your phone and access to the app secure. We therefore recommend that you do not jailbreak or root your phone, which is the process of removing software restrictions and limitations imposed by the official operating system of your device. It could make your phone vulnerable to malware/viruses/malicious programs, compromise your phone’s security features and it could mean that the AdzApp app won’t work properly or at all.\n

You should be aware that there are certain things that D Thoughts Innolabs will not take responsibility for. Certain functions of the app will require the app to have an active internet connection. The connection can be Wi-Fi, or provided by your mobile network provider, but D Thoughts Innolabs cannot take responsibility for the app not working at full functionality if you don’t have access to Wi-Fi, and you don’t have any of your data allowance left.\n

If you’re using the app outside of an area with Wi-Fi, you should remember that your terms of the agreement with your mobile network provider will still apply. As a result, you may be charged by your mobile provider for the cost of data for the duration of the connection while accessing the app, or other third party charges. In using the app, you’re accepting responsibility for any such charges, including roaming data charges if you use the app outside of your home territory (i.e. region or country) without turning off data roaming. If you are not the bill payer for the device on which you’re using the app, please be aware that we assume that you have received permission from the bill payer for using the app.\n

Along the same lines, D Thoughts Innolabs cannot always take responsibility for the way you use the app i.e. You need to make sure that your device stays charged – if it runs out of battery and you can’t turn it on to avail the Service, D Thoughts Innolabs cannot accept responsibility\n

With respect to D Thoughts Innolabs’s responsibility for your use of the app, when you’re using the app, it’s important to bear in mind that although we endeavour to ensure that it is updated and correct at all times, we do rely on third parties to provide information to us so that we can make it available to you. D Thoughts Innolabs accepts no liability for any loss, direct or indirect, you experience as a result of relying wholly on this functionality of the app.\n

At some point, we may wish to update the app. The app is currently available on Android and iOS – the requirements for both systems (and for any additional systems we decide to extend the availability of the app to) may change, and you’ll need to download the updates if you want to keep using the app. D Thoughts Innolabs does not promise that it will always update the app so that it is relevant to you and/or works with the iOS/Android version that you have installed on your device. However, you promise to always accept updates to the application when offered to you, We may also wish to stop providing the app, and may terminate use of it at any time without giving notice of termination to you. Unless we tell you otherwise, upon any termination, (a) the rights and licenses granted to you in these terms will end; (b) you must stop using the app, and (if needed) delete it from your device.\n

Changes to This Terms and Conditions\n

We may update our Terms and Conditions from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Terms and Conditions on this page. These changes are effective immediately after they are posted on this page.\n

Contact Us\n

If you have any questions or suggestions about our Terms and Conditions, do not hesitate to contact us.\n
</string>
    <string name="intro_slide3_permission_description">We require some permissions to provide best from our app.</string>
    <string name="intro_slide3_button_text">Grant permissions</string>
    <string name="intro_slide3_mesasge">All permissions are granted</string>
    <string name="intro_slide4_finish_title">That\'s it</string>
    <string name="intro_slide4_finish_description">You are all set to use our app.</string>
    <string name="about_page_contact_group_name">Contact us</string>
    <string name="about_page_app_group_name">About</string>
    <string name="about_page_app_preference_group_name">More From app</string>
    <string name="about_page_company_description">Let\'s make your ads fly</string>
    <string name="about_page_developer_email_address">adzappinnovations@gmail.com</string>
    <string name="about_page_developer_website">http://adzapp.in</string>
    <string name="about_page_developer_facebook_address">facebook username</string>
    <string name="about_page_developer_twitter_address">twitter username</string>
    <string name="about_page_developer_playStore_address">playstore address</string>
    <string name="about_page_company_name">D Thoughts Innolabs</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="Third_party_licenses">Third party licenses</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy_url">http://www.adzapp.in/privacy_policy.html</string>
    <string name="terms_and_conditions_url">http://www.adzapp.in/terms_and_conditions.html</string>
    <string name="Feedback_success">Feedback sent successfully</string>
</resources>