<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <include layout="@layout/toolbar" />
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/auth_bg_anim_list"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_bg"
            android:layout_marginLeft="@dimen/feed_item_margin"
            android:layout_marginRight="@dimen/feed_item_margin"
            android:layout_marginTop="@dimen/feed_item_margin"
            android:orientation="vertical"
            android:paddingBottom="@dimen/feed_item_padding_top_bottom"
            android:paddingTop="@dimen/feed_item_padding_top_bottom" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingLeft="@dimen/feed_item_padding_left_right"
                android:paddingRight="@dimen/feed_item_padding_left_right" >

                <ImageView
                    android:id="@+id/profilePic"
                    android:transitionName="profilePic"
                    android:layout_width="@dimen/feed_item_profile_pic"
                    android:layout_height="@dimen/feed_item_profile_pic"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/profile_pic_description"
                    app:srcCompat="@drawable/ic_account_circle_black_24dp" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/feed_item_profile_info_padd" >

                    <TextView
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_publisher_name"
                        android:textSize="@dimen/feed_item_profile_name"
                        android:textStyle="bold"
                        android:transitionName="publisherName" />

                    <TextView
                        android:id="@+id/expireson"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dummy_timestamp"
                        android:textColor="@color/timestamp"
                        android:textSize="@dimen/feed_item_timestamp"
                        android:transitionName="expiryDate" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/adDescription"
                android:transitionName="description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                android:paddingRight="@dimen/feed_item_status_pad_left_right"
                android:paddingTop="@dimen/feed_item_status_pad_top"
                android:text="@string/dummy_text" />

            <TextView
                android:id="@+id/txtUrl"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/feed_item_status_pad_left_right"
                android:paddingRight="@dimen/feed_item_status_pad_left_right"
                android:text="@string/dummy_url"
                android:textColorLink="@color/link" />

            <ImageView
                android:id="@+id/adBanner"
                android:transitionName="banner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/white"
                android:scaleType="fitXY"
                android:visibility="visible"
                android:contentDescription="@string/profile_pic_description"
                app:srcCompat="@drawable/ic_dashboard_black_24dp" />

            <tcking.github.com.giraffeplayer2.VideoView
                android:id="@+id/video_view"
                android:transitionName="videoPlayer"
                android:layout_width="match_parent"
                android:layout_height="175sp"
                android:visibility="gone"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/redeemButton"
                android:background="@drawable/auth_bg_gradient_two"
                android:textColor="@android:color/white"
                android:text="@string/redeem"/>
        </LinearLayout>


    </ScrollView>
</LinearLayout>
