<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/auth_bg_anim_list">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">


        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/displaypic"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="fitXY"
                        android:contentDescription="@string/profile_pic_description"
                        app:srcCompat="@drawable/ic_account_circle_black_24dp" />

                    <ImageButton
                        android:id="@+id/changePic"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentTop="true"
                        android:background="@android:color/transparent"
                        android:contentDescription="@string/profile_pic_description"
                        android:src="@drawable/ic_add_a_photo_black_24dp" />
                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:visibility="gone"/>


                </RelativeLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/displayname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/display_name"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/mobilenumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/mobile_number"
                        android:inputType="phone"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="20dp"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/black" />
                </android.support.design.widget.TextInputLayout>

                <Switch
                    android:id="@+id/adpublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/black"
                    android:visibility="gone"
                    android:hint="@string/ad_publisher"/>

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dip"
                    android:background="@drawable/auth_bg_gradient_two"
                    android:text="@string/btn_save_details"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="15sp" />


            </LinearLayout>

        </android.support.v7.widget.CardView>


        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="gone"/>
    </RelativeLayout>




</ScrollView>